--- a/src/BusinessLogic/Resources/templates/shipping-services-list.html
+++ b/src/BusinessLogic/Resources/templates/shipping-services-list.html
@@ -1,4 +1,4 @@
-<div class="pl-shipping-services-list pl-page-content">
+<div class="pl-shipping-services-list">
 
 </div>
 <template id="pl-shipping-services-list-item">
