--- a/src/BusinessLogic/Resources/templates/my-shipping-services.html
+++ b/src/BusinessLogic/Resources/templates/my-shipping-services.html
@@ -1,24 +1,22 @@
 <div class="pl-my-shipping-services-page pl-flex-expand">
-    <div class="pl-flex-expand">
-        <header>
-            {$shippingServices.myServices}
-        </header>
-        <div class="pl-full-width pl-flex-expand">
-            <article id="pl-no-shipping-services"
-                     class="pl-no-services pl-flex-expand pl-center pl-page-padding pl-page-content pl-hidden">
-                <img src="{$BASE_URL$}/images/service_truck.png" alt="">
-                <div class="pl-no-services-description">
-                    <h1>{$shippingServices.noServicesTitle}</h1>
-                    <p>{$shippingServices.noServicesDescription}</p>
-                    <button class="pl-button pl-button-primary pl-add-service-button">
-                        {$shippingServices.addService}
-                    </button>
-                </div>
-            </article>
-            <div id="pl-shipping-services-table" class="pl-full-width">
+    <header>
+        {$shippingServices.myServices}
+    </header>
+    <div class="pl-page-content pl-flex-expand">
+        <article id="pl-no-shipping-services"
+                 class="pl-no-services pl-flex-expand pl-center pl-page-padding pl-page-content pl-hidden">
+            <img src="{$BASE_URL$}/images/service_truck.png" alt="">
+            <div class="pl-no-services-description">
+                <h1>{$shippingServices.noServicesTitle}</h1>
+                <p>{$shippingServices.noServicesDescription}</p>
+                <button class="pl-button pl-button-primary pl-add-service-button">
+                    {$shippingServices.addService}
+                </button>
             </div>
-            <div id="pl-shipping-services-list" class="pl-full-width pl-shipping-services-list">
-            </div>
+        </article>
+        <div id="pl-shipping-services-table" class="pl-full-width">
+        </div>
+        <div id="pl-shipping-services-list" class="pl-full-width pl-shipping-services-list">
         </div>
     </div>
     <div class="pl-page-buttons">
