--- a/src/BusinessLogic/Resources/templates/edit-shipping-service.html
+++ b/src/BusinessLogic/Resources/templates/edit-shipping-service.html
@@ -51,6 +51,10 @@
                 </div>
                 <button type="button" class="pl-button pl-button-secondary pl-top-separate">
                 </button>
+                <div class="pl-checkbox pl-hidden" id="pl-use-packlink-price-wrapper">
+                    <input type="checkbox" name="usePacklinkPriceIfNotInRange" id="pl-use-packlink-price-if-not-in-range">
+                    <label for="pl-use-packlink-price-if-not-in-range">{$shippingServices.usePacklinkRange}</label>
+                </div>
             </section>
             <section id="pl-tax-class-section" class="pl-hidden">
                 <div class="pl-section-title">
