Fix styles and translations
Issue: PLCR1801-53

--- a/src/BusinessLogic/Resources/scss/ui-controls.scss
+++ b/src/BusinessLogic/Resources/scss/ui-controls.scss
@@ -331,6 +331,7 @@
     border: 1px solid transparent;
     border-radius: .25rem;
     flex-direction: row;
+    align-items: center;
 
     &.pl-alert-danger {
       color: $color-red;
