Extract code from edit service controller
This separates handling of specific modals from the main page.
Fixed some translations and styles.

--- a/src/BusinessLogic/Resources/templates/pricing-policies-list.html
+++ b/src/BusinessLogic/Resources/templates/pricing-policies-list.html
@@ -8,15 +8,15 @@
         </label>
         <div class="pl-range-type-wrapper pl-row-orientation pl-separate-content pl-separate-top-small"
              id="pl-price-range-wrapper">
-            <span></span>
-            <button class="pl-edit-pricing-policy pl-small pl-button-secondary pl-no-margin">
+            <span class="pl-right-separate"></span>
+            <button class="pl-edit-pricing-policy pl-small pl-button pl-button-secondary pl-no-margin">
                 {$general.edit}
             </button>
         </div>
         <div class="pl-pricing-policy-wrapper pl-row-orientation pl-separate-content pl-separate-top-small"
              id="pl-price-policy-range-wrapper">
-            <span></span>
-            <button class="pl-clear-pricing-policy pl-small pl-button-inverted pl-button-clear pl-no-margin">
+            <span class="pl-right-separate"></span>
+            <button class="pl-clear-pricing-policy pl-small pl-button pl-button-secondary pl-no-border pl-no-margin">
                 {$general.delete}
             </button>
         </div>
