Add detecting changes on edit shipping services page

--- a/src/BusinessLogic/Resources/scss/app.scss
+++ b/src/BusinessLogic/Resources/scss/app.scss
@@ -49,7 +49,7 @@
   }
 
   .pl-register-country-list-wrapper {
-    margin-top: 15px;
+    padding-top: 15px;
     min-width: 300px;
     width: 100%;
     display: flex;
