Fix issues regarding shipping services table
Issue: PLCR1801-58

--- a/src/BusinessLogic/Resources/scss/ui-controls.scss
+++ b/src/BusinessLogic/Resources/scss/ui-controls.scss
@@ -555,7 +555,7 @@
       font-weight: bold;
       text-transform: uppercase;
       position: sticky;
-      top: 0;
+      top: -1px;
 
       &.pl-text-center {
         text-align: center;
