Remove autocomplete from search fields
Issue: PLCR1801-69

--- a/src/BusinessLogic/Resources/templates/register-modal.html
+++ b/src/BusinessLogic/Resources/templates/register-modal.html
@@ -1,6 +1,6 @@
 <div class="pl-form-group">
     <input id="pl-country-filter" placeholder="{$register.searchCountry}" type="text" class="form-control compact"
-           name="countryFilter">
+           name="countryFilter" autocomplete="no">
     <i class="material-icons">search</i>
 </div>
 <div class="pl-register-country-list-wrapper pl-page-content pl-no-margin">
