--- a/src/BusinessLogic/Resources/templates/default-warehouse.html
+++ b/src/BusinessLogic/Resources/templates/default-warehouse.html
@@ -43,7 +43,8 @@
                 <div class="pl-form-group">
                     <input type="text" id="pl-default-warehouse-postal_code" name="postal_code"
                            placeholder="{$defaultWarehouse.postal_code-placeholder}"
-                           data-required="true"/>
+                           data-required="true"
+                           autocomplete="no"/>
                     <label for="pl-default-warehouse-postal_code">{$defaultWarehouse.postal_code}</label>
                     <i class="material-icons">search</i>
                 </div>
