--- a/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
+++ b/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
@@ -65,7 +65,7 @@
                 </select>
                 <i class="material-icons">expand_more</i>
                 <label for="pl-pricing-policy-select" class="pl-text-input-label">
-                    {$shippingServices.singlePricePolicy}
+                    {$shippingServices.pricePolicy}
                 </label>
             </div>
             <div class="pl-form-group" id="pl-price-percentage-wrapper">
