Fix placeholder color
Issue: PLCR1801-74

--- a/src/BusinessLogic/Resources/scss/ui-controls.scss
+++ b/src/BusinessLogic/Resources/scss/ui-controls.scss
@@ -216,7 +216,7 @@
         padding: 13px 16px;
       }
 
-      ::placeholder, ::-webkit-input-placeholder {
+      &::placeholder, &::-webkit-input-placeholder {
         color: $color-light;
       }
     }
