Change placeholder color to #CBCBCB
Issue: PLCR1801-74

--- a/src/BusinessLogic/Resources/scss/ui-controls.scss
+++ b/src/BusinessLogic/Resources/scss/ui-controls.scss
@@ -217,7 +217,7 @@
       }
 
       &::placeholder, &::-webkit-input-placeholder {
-        color: $color-light;
+        color: #CBCBCB;
       }
     }
 
