--- a/src/BusinessLogic/Resources/scss/app.scss
+++ b/src/BusinessLogic/Resources/scss/app.scss
@@ -216,6 +216,7 @@
     width: 100%;
     justify-content: space-between;
     padding: 0 20px;
+    flex: 0 0 auto;
   }
 
   .pl-pick-shipping-services-page {
