Fix countries selection validation
Issue: PLCR1801-91

--- a/src/BusinessLogic/Resources/scss/app.scss
+++ b/src/BusinessLogic/Resources/scss/app.scss
@@ -334,6 +334,14 @@
   .pl-shipping-country-selected {
     background-color: $border-light;
   }
+
+  #pl-countries-alert-wrapper {
+    position: relative;
+    display: none;
+    &.visible {
+      display: flex;
+    }
+  }
 }
 
 // mobile rules
