--- a/src/BusinessLogic/Resources/templates/countries-selection-modal.html
+++ b/src/BusinessLogic/Resources/templates/countries-selection-modal.html
@@ -2,6 +2,12 @@
     <form id="pl-countries-selection-form" class="pl-full-width">
         <section class="pl-modal-subtitle">
             {$shippingServices.selectCountriesSubheader}
+            <div class="pl-alert-wrapper" id="pl-countries-alert-wrapper">
+                <div class="pl-alert pl-alert-danger">
+                    <span class="pl-alert-text">{$shippingServices.atLeastOneCountry}</span>
+                    <i class="material-icons">close</i>
+                </div>
+            </div>
         </section>
         <section class="pl-checkbox pl-country-checkbox-wrapper pl-no-margin">
             <input type="checkbox" name="isShipToAllCountries" id="pl-is-ship-to-all-countries">
