--- a/src/BusinessLogic/Resources/templates/default-warehouse.html
+++ b/src/BusinessLogic/Resources/templates/default-warehouse.html
@@ -43,6 +43,7 @@
                 <div class="pl-form-group">
                     <input type="text" id="pl-default-warehouse-postal_code" name="postal_code"
                            placeholder="{$defaultWarehouse.postal_code-placeholder}"
+                           class="pl-with-label"
                            data-required="true"
                            autocomplete="no"/>
                     <label for="pl-default-warehouse-postal_code">{$defaultWarehouse.postal_code}</label>
