--- a/src/BusinessLogic/Resources/templates/pick-shipping-services.html
+++ b/src/BusinessLogic/Resources/templates/pick-shipping-services.html
@@ -70,7 +70,7 @@
         </div>
         <div id="pl-shipping-services-table" class="pl-full-width">
         </div>
-        <div id="pl-shipping-services-list" class="pl-full-width pl-shipping-services-list">
+        <div id="pl-shipping-services-list" class="pl-full-width">
         </div>
     </div>
 </div>
