--- a/src/BusinessLogic/Resources/templates/my-shipping-services.html
+++ b/src/BusinessLogic/Resources/templates/my-shipping-services.html
@@ -16,7 +16,7 @@
         </article>
         <div id="pl-shipping-services-table" class="pl-full-width">
         </div>
-        <div id="pl-shipping-services-list" class="pl-full-width pl-shipping-services-list">
+        <div id="pl-shipping-services-list" class="pl-full-width">
         </div>
     </div>
     <div class="pl-page-buttons">
