--- a/src/BusinessLogic/Resources/scss/utility.scss
+++ b/src/BusinessLogic/Resources/scss/utility.scss
@@ -148,7 +148,7 @@
 
   .pl-page-buttons {
     display: block;
-    text-align: center;
+    //text-align: center;
     padding: 0 20px 20px;
   }
 
