--- a/src/BusinessLogic/Resources/templates/onboarding-overview.html
+++ b/src/BusinessLogic/Resources/templates/onboarding-overview.html
@@ -1,4 +1,4 @@
-<div class="pl-onboarding-overview-page pl-flex-expand pl-medium-page">
+<div class="pl-onboarding-overview-page pl-flex-expand pl-medium-page pl-page-onboarding">
     <div class="pl-text-center pl-page-padding pl-page-content">
         <div class="pl-bottom-separate">
             <h1 class="pl-text-center">
