--- a/src/BusinessLogic/Resources/templates/onboarding-welcome.html
+++ b/src/BusinessLogic/Resources/templates/onboarding-welcome.html
@@ -1,4 +1,4 @@
-<div class="pl-onboarding-welcome-page pl-flex-expand pl-medium-page">
+<div class="pl-onboarding-welcome-page pl-flex-expand pl-medium-page pl-page-onboarding">
     <div class="pl-text-center pl-page-padding">
         <h1>
             {$onboardingWelcome.header}
