--- a/src/BusinessLogic/Resources/templates/my-shipping-services.html
+++ b/src/BusinessLogic/Resources/templates/my-shipping-services.html
@@ -4,7 +4,7 @@
     </header>
     <div class="pl-page-content pl-flex-expand">
         <article id="pl-no-shipping-services"
-                 class="pl-no-services pl-flex-expand pl-center pl-page-padding pl-page-content pl-hidden">
+                 class="pl-no-services pl-flex-expand pl-center pl-page-padding pl-page-content pl-hidden pl-no-margin">
             <img src="{$BASE_URL$}/images/service_truck.png" alt="">
             <div class="pl-no-services-description">
                 <h1>{$shippingServices.noServicesTitle}</h1>
