--- a/src/BusinessLogic/Resources/css/app.css
+++ b/src/BusinessLogic/Resources/css/app.css
@@ -1017,11 +1017,9 @@
   color: #717c87;
   margin-right: 5px;
 }
-
 #pl-page .pl-page-onboarding .pl-page-buttons {
   text-align: center;
 }
-
 #pl-page .pl-page-config {
   width: 100%;
   flex-grow: 1;
@@ -1030,16 +1028,13 @@
   text-align: left;
   margin-left: 10px;
 }
-
 #pl-page .pl-page-config .pl-small-page, #pl-page .pl-page-config .pl-medium-page {
   margin-left: 0;
   margin-right: 0;
 }
-
 #pl-page .pl-page-config .pl-text-center {
   text-align: center;
 }
-
 #pl-page .pl-status-mapping {
   width: 100%;
   flex-direction: row;
@@ -1181,34 +1176,51 @@
     padding-right: 15px;
     padding-left: 20px;
   }
+
   #pl-page .pl-configuration-page .pl-footer {
     flex-direction: column;
   }
+
   #pl-page .pl-configuration-page .pl-footer > :first-child {
     padding-bottom: 20px;
   }
+
   #pl-page .pl-my-shipping-services-page .pl-no-services {
     flex-direction: column;
-    align-items: center;
     justify-content: flex-start;
+    padding-bottom: 0;
   }
+
+  #pl-page .pl-my-shipping-services-page .pl-no-services img {
+    max-height: 40%;
+  }
+
   #pl-page .pl-my-shipping-services-page .pl-no-services .pl-no-services-description {
     margin: 20px 0 0;
   }
+
   #pl-page .pl-my-shipping-services-page .pl-no-services .pl-no-services-description h1 {
     text-align: center;
   }
+
   #pl-page .pl-my-shipping-services-page .pl-no-services .pl-no-services-description button {
     display: none;
   }
+
+  #pl-page .pl-my-shipping-services-page .pl-no-services .pl-no-services-description p {
+    margin-bottom: 0;
+  }
+
   #pl-page .pl-my-shipping-services-page .pl-page-buttons {
     display: flex;
   }
 }
+
 @media (max-width: 1280px) {
   #pl-page .pl-services-filter-wrapper {
     padding: 0 10px;
   }
+
   #pl-page .pl-services-filter-wrapper .pl-filter:not(.pl-filter-selected) {
     display: none;
   }
